--- a/frontend/signup/signup.css
+++ b/frontend/signup/signup.css
@@ -130,7 +130,7 @@ body{
     text-align: right;
     margin-bottom: 20px;
 }
-.sp-footer p {
+.sp-footer .sp-team-name {
     padding: 0 5px;
     align-self: center;
 }
