--- a/frontend/css/product.css
+++ b/frontend/css/product.css
@@ -82,16 +82,11 @@ header input:focus {
 }
 
 .search-icon {
-    color: #4F4F4F;
     font-size: .8rem;
     position: absolute;
     top: 55%;
     transform: translateY(-50%);
     left: .5rem;    
-}
-
-::placeholder {
-    color: #4F4F4F;
 }
 
 .mob_search-bar input {
@@ -105,16 +100,6 @@ header input:focus {
     font-size: 1.75rem;
     font-weight: 600;
     letter-spacing: .2rem;
-}
-
-.company-logo > a {
-    color: unset;
-    text-decoration: none;
-}
-
-.company-logo > a:hover {
-    border-bottom: none;
-    text-decoration: none;
 }
 
 .desktop_nav {
@@ -177,25 +162,20 @@ header input:focus {
 
 .pp_main h1 {    
     color: #00BBF9;
-    font-size: 1.85rem;
-    font-weight: 600;
+    font-size: 1.5rem;
     text-align: center;
 }
 
 .pp_main h2 {
-    color: #1D1D1D;
-    font-size: 1.6rem;
-    letter-spacing: .05rem;
+    font-size: 1.2rem;
 }
 
 .pp_main h3 {
-    color: #1D1D1D;
     font-size: 1.1rem;
-    margin: .5rem 0;
 }
 
 .pp_main a {
-    color: #1D1D1D;
+    color: black;
     text-decoration: none;
 }
 
@@ -213,7 +193,7 @@ header input:focus {
     background-color: #005E7D;
     border-radius: 7px;
     color: white;
-    margin: 1rem 0 2.5rem;
+    margin: 1rem 0 1.5rem;
     min-height: 200px;    
     overflow: hidden; 
     text-align: left;       
@@ -221,10 +201,6 @@ header input:focus {
 
 .pp_section h4, .pp_section a, .pp_buttons-container {
     margin: 1rem 0;
-}
-
-.pp_section a {
-    color: white;
 }
 
 .pp_section p {
@@ -272,10 +248,6 @@ footer {
     background-color: #003E53;
     margin: 0 -1.25rem;
     padding: 1.25rem 0;
-}
-
-footer .company-logo {
-    color: white;
 }
 
 footer a:hover {
