--- a/frontend/product-page/product-page.css
+++ b/frontend/product-page/product-page.css
@@ -1,4 +1,4 @@
-.pp_body {
+.page_body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -169,99 +169,105 @@ header input:focus {
 
 /* ###---MAIN START---### */
 
-.pp_main {
+.page_main {
     display: flex;
     flex-direction: column;
     text-align: left;    
 }
 
-.pp_main h1 {    
+.page_main h1 {    
     color: #00BBF9;
-    font-size: 1.85rem;
-    font-weight: 600;
+    font-size: 1.5rem;
     text-align: center;
 }
 
-.pp_main h2 {
-    color: #1D1D1D;
-    font-size: 1.6rem;
-    letter-spacing: .05rem;
+.page_main h2 {
+    font-size: 1.2rem;
 }
 
-.pp_main h3 {
-    color: #1D1D1D;
+.page_main h3 {
     font-size: 1.1rem;
-    margin: .5rem 0;
 }
 
-.pp_main a {
-    color: #1D1D1D;
+.page_main a {
+    color: black;
     text-decoration: none;
 }
 
-.pp_main a:hover {
+.page_main a:hover {
     color: #003E53;
     text-decoration: underline;
 }
 
-.pp_section {
+.page_article h2 {
+    color: #00BBF9;
+    font-size: 1.75rem;
+    margin: 1rem 0 3rem;
+    text-align: center;    
+}
+
+.page_article h3 {
+    font-size: 1.7rem;
+    margin: 1.35rem 0;
+}
+
+.page_article .page_more-link {
+    color: #9B5DE5;    
+    width: 100%;
+}
+
+.page_section {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-
-    background-color: #005E7D;
-    border-radius: 7px;
-    color: white;
-    margin: 1rem 0 2.5rem;
+    
+    color: #1D1D1D;
+    margin: 1rem 0 1.5rem;
     min-height: 200px;    
     overflow: hidden; 
     text-align: left;       
 }
 
-.pp_section h4, .pp_section a, .pp_buttons-container {
+.page_section h3 {
+    width: 100%;
+}
+
+.page_section div {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
+    background-color: #005E7D;   
+    border-radius: 8px; 
+    color: white;
+    font-weight: 400;
+    padding: 1rem;
+    margin: 1rem 0;        
+    width: 100%;    
+}
+
+.page_section img {
+    width: 3rem;
+    margin-bottom: .75rem;
+}
+
+.page_section h4, .page_section a, .page_buttons-container {
     margin: 1rem 0;
-}
-
-.pp_section a {
     color: white;
 }
 
-.pp_section p {
-    min-width: 200px;
-    width: 50%;    
+.article_section {    
+    background-color: #CCF1FE;
+    margin: 0 -1.25rem;
+    padding: 0 1.25rem;
 }
 
-.pp_buttons-container button {
-    background-color: transparent;
-    border: 1px solid white;
-    border-radius: 7px;
-    color: white;
-    cursor: pointer;
-    font-size: .9rem;
-    font-weight: 700;
-
-    height: 2rem;
-    margin: 0 .5rem;
-    padding: 0 .5rem;
-}
-
-.pp_buttons-container button:hover {
-    background-color: white;
-    color: #00BBF9;
-}
-
-.pp_article-nav ul {
-    list-style: none;
-}
-
-.pp_article-nav li {
-    margin: .5rem 0;
-}
-
-.pp_team {    
-    color: #00BBF9;    
-    text-align: center;
+.page_section .page_products--img {
+    width: 60%;
+    margin: 2rem auto;
 }
 
 /* ###---MAIN END---### */
@@ -320,7 +326,7 @@ footer a:hover {
 /* ---Tablets--- */
 @media screen and (min-width: 820px) {
 
-    .pp_body {
+    .page_body {
         padding: 0 4rem;
     }
 
@@ -397,9 +403,14 @@ footer a:hover {
         height: 100%;
     }
 
-    .pp_main {
+    .page_main {
         margin: 0 -4rem;
         padding: 2.5rem 4rem;
+    }
+
+    .article_section {            
+        margin: 0 -4rem;
+        padding: 0 4rem;
     }
 
     footer {
@@ -429,7 +440,7 @@ footer a:hover {
 /* ---Desktops--- */
 @media screen and (min-width: 1200px) {
 
-    .pp_body {
+    .page_body {
         padding: 0 6.5rem;
     }
 
@@ -447,9 +458,23 @@ footer a:hover {
         min-width: 6rem;        
     }
 
-    .pp_main {
+    .page_main {
         margin: 0 -6.5rem;
         padding: 3.5rem 6.5rem;
+    }
+
+    .page_section div {              
+        padding: 1.5rem;                
+        width: 45%;    
+    } 
+    
+    .page_article .page_more-link {        
+        margin-left: 95%;         
+    }
+    
+    .article_section {            
+        margin: 0 -6.5rem;
+        padding: 0 6.5rem;
     }
 
     footer {
