--- a/frontend/signup/signup.css
+++ b/frontend/signup/signup.css
@@ -85,6 +85,7 @@ body{
     width: 100%;
     padding-bottom: 1.2rem;
     text-align: center;
+    /* hidding line. */
 }
 .sp-main-footer h4 {
     font-weight: normal;
