--- a/frontend/about_us_page/about-us.css
+++ b/frontend/about_us_page/about-us.css
@@ -34,6 +34,7 @@ header,
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  font-size: 20px;
 }
 
 header .company-logo {
@@ -96,7 +97,7 @@ header input:focus {
   position: absolute;
   top: 55%;
   transform: translateY(-50%);
-  left: 0.5rem;
+  right: 80px;
 }
 
 .mob_search-bar input {
@@ -107,9 +108,9 @@ header input:focus {
 
 .company-logo {
   color:   #00bbf9;
-  font-size: 1.75rem;
-  font-weight: 600;
-  letter-spacing: 0.2rem;
+  font-size: 36px;
+  font-weight: 400;
+  
 }
 
 .desktop_nav {
@@ -176,15 +177,15 @@ header input:focus {
   background-size: contain;
   background-repeat: no-repeat;
   width: 100%;
-  height: 100vh;
+  height: 785px;
   position: relative;
 }
 #au-avatar h1 {
   position: absolute;
-  top: 50%;
+  top: 35%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 70px;
+  font-size: 113.3px;
   color: white;
 }
 
@@ -204,9 +205,15 @@ header input:focus {
   font-weight: 900;
 }
 .au-auth-wiki {
-  padding: 40px 0;
+  padding-bottom:30px;
   text-align: left;
   width: 70%;
+  font-size: 48px;
+  font-weight: 400;
+  line-height:65.37px ;
+}
+.au-auth-wiki h3{
+  font-size: 56px;
 }
 #au-get-started {
   display: flex;
@@ -214,8 +221,9 @@ header input:focus {
   align-items: center;
   background-color:#CCF1FE;
   margin-top: 50px;
+  height: 315px;
   padding: 40px;
-  font-size: 56px;
+  font-size: 40px;
   font-weight: 400;
   font-family: "open sans" sans-serif;
 }
@@ -224,7 +232,7 @@ header input:focus {
   height: 64px;
   font-family: Open Sans;
   font-weight: 400;
-  font-size: 25px;
+  font-size: 20px;
   line-height: 40px;
   background:  #003E53;
   color: white;
@@ -236,133 +244,11 @@ header input:focus {
   width: 100%;
   height: auto;
 }
-
-/* MISSION,VISION,HISTORY AND VALUES CONTAINER */
-
-.au-flex-container {
-  width: 80%;
-  margin: 150px auto;
-  padding: 0 25px;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  align-items: center;
-  justify-content: space-between;
-  column-gap: 40px;
-  row-gap: 30px;
-}
-
-/* MEDIA QUERY FOR RESPONSIVE DESKTOP,TABLET AND PHONE */
-
-@media screen and (max-width: 1440px) {
-  .au-flex-container {
-   
-    margin: 150px auto;
-    padding: 0 25px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    align-items: center;
-    justify-content: space-between;
-    column-gap: 40px;
-    row-gap: 30px;
-  }
-}
-
-@media screen and (max-width: 1020px) {
-  .au-flex-container {
-    width: 800px;
-    margin: 150px auto;
-    padding: 0 25px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    align-items: center;
-    justify-content: space-between;
-    gap: 20px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .au-flex-container {
-    width: 90%;
-    margin: 150px auto;
-    padding: 0 25px;
-    display: grid;
-    grid-template-columns: 1fr;
-    align-items: center;
-    justify-content: space-between;
-    gap: 20px;
-  }
-  #au-avatar h1 {
-    font-size: 40px;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-  }
-}
-
-@media screen and (max-width: 470px) {
-  .au-flex-container {
-    width: 100%;
-    margin: 150px auto;
-    display: grid;
-    grid-template-columns: 100%;
-    align-items: center;
-    justify-content: space-between;
-    gap: 20px;
-  }
-
-  .au-faqs {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: auto;
-    margin-bottom: 40px;
-  }
-  #au-avatar {
-    background-image: url(IMAGES/about.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 150px;
-    position: relative;
-  }
-  #au-avatar h1 {
-    font-size: 20px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-  }
-  .au-auth-wiki{
-    line-height:30px;
-    font-size: 20px;
-  }
-  .au-auth-wiki br{
-    display: none;
-  }
-  #au-get-started{
-    font-size: 30px;
-  }
- 
-  .au-flex-item{
-    height: 40px;
-    font-size: auto;
-    line-height: 30px;
-    padding-bottom: 20px;
-  }
-   
-  .au-zuri-team{
-    margin-bottom: 30px;
-  }
-}
- 
-
-/* END CONTAINER */
-
-.au-flex-item {
-  width: 100%;
+ .au-qa{
+  width: 803px;
+ }
+ .au-flex-item {
+  width: 394px;
   height: 100%;
   background-color:#005E7D;
   box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
@@ -374,7 +260,8 @@ header input:focus {
   font-size: 15px;
 }
 .au-flex-item p {
-  font-size: 30px;
+  font-size: 36px;
+  width: 100%;
 }
 .au-flex-item img{
   padding: 30px 10px;
@@ -417,6 +304,7 @@ header input:focus {
 }
 footer {
   background-color: #005E7D;
+ 
 }
 
 footer a:hover {
@@ -441,16 +329,281 @@ footer a:hover {
 
 .footer_nav a {
   color: hsl(0, 0%, 75%);
-  font-size: 0.75rem;
+  font-size: 20px;
   text-decoration: none;
 }
-
-.socials a {
+.au-cp{
+  display: flex;
+  flex-direction: row;
+}
+.au-cp p {
+  padding: 0 5px;
+   
+  margin-top: 100px;
+  align-self: center;
+  padding-bottom: 40px;
+  font-size: 16px;
+}
+.au-copyright {
+  display: flex;
+  justify-content: space-between;
+  float: right;
+  margin-top: 70px;
   color: white;
-  font-size: 1.35rem;
-  margin: 0 0.25rem;
+  font-size: 12px;
+  padding-right: 70px;
+   
+}
+.au-copyright .au-icon {
+  width: 20px;
+  height: 20px;
+  align-self: center;
+  margin-top: 60px;
+}
+/* MISSION,VISION,HISTORY AND VALUES CONTAINER */
+
+.au-flex-container {
+  width: 100%;
+  margin: 150px auto;
+  padding: 0 25px;
+  display: grid;
+  grid-template-columns: repeat(2, 658px);
+  align-items: center;
+  justify-content: space-between;
+  column-gap: 40px;
+  row-gap: 30px;
 }
 
+/* MEDIA QUERY FOR RESPONSIVE DESKTOP,TABLET AND PHONE */
+
+@media screen and (max-width: 1440px) {
+  .au-flex-container {
+   
+    margin: 150px auto;
+    padding: 0 25px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    justify-content: space-between;
+    column-gap: 40px;
+    row-gap: 30px;
+  }
+  .au-flex-item {
+    width: 300px;
+    height: 100%;
+    background-color:#005E7D;
+    box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 16px;
+    color: white;
+    text-align: center;
+    font-family: "open sans" sans-serif;
+    padding: 10px 30px 50px 30px;
+    font-size: 15px;
+}
+#au-avatar h1{
+  top: 30%;
+  font-size: 56px;
+}
+.au-auth-wiki{
+  position: absolute;
+}
+#au-get-started{
+  margin-top: 20%;
+}
+}
+
+@media screen and (max-width: 1020px) {
+  .au-flex-container {
+    width: 100%;
+    margin: 150px auto;
+    padding: 0 25px;
+    margin-right:300px;
+    display: grid;
+    align-items: center;
+    justify-content: space-around;
+    column-gap:none;
+    
+  }
+  .au-flex-item {
+    width: 180px;
+    height: 100%;
+    background-color:#005E7D;
+    box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 16px;
+    color: white;
+    text-align: center;
+    font-family: "open sans" sans-serif;
+    padding: 10px 30px 50px 30px;
+    font-size: 15px;
+  }
+   .au-flex-item img{
+    padding-right: 90px;
+   }
+  #au-avatar h1 {
+    font-size: 40px;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+  }
+  .au-auth-wiki{
+     position: absolute;
+     font-size: 30px;
+  }
+  #au-get-started{
+    margin-top: 60%;
+  }
+  .au-qa{
+    width:60%;
+   }
+  .au-zuri-team{
+    font-size: 20px;
+    color: white;
+  }
+  .au-cp{
+    
+    margin-right:200px;
+      
+  }
+  
+}
+
+
+@media screen and (max-width: 768px) {
+  .au-flex-container {
+    width: 90%;
+    margin: 150px auto;
+    padding: 0 25px;
+    display: grid;
+    grid-template-columns: 1fr;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+  }
+  .au-flex-item{
+    margin-left: 15%;
+    width: 300px;
+  }
+  #au-avatar h1 {
+    font-size: 40px;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+  }
+  .au-auth-wiki{
+     position: absolute;
+     font-size: 30px;
+  }
+  #au-get-started{
+    margin-top: 60%;
+  }
+  .au-qa{
+    width:60%;
+   }
+  .au-zuri-team{
+    font-size: 20px;
+    color: white;
+  }
+  .au-cp{
+    
+    margin-right:200px;
+      
+  }
+}
+
+@media screen and (max-width: 470px) {
+  .au-flex-container {
+    width: 100%;
+    margin: 150px auto;
+    display: grid;
+    grid-template-columns: 100%;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+  }
+ 
+  .au-faqs {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+    height: auto;
+    margin-bottom: 40px;
+    margin-left: 5%;
+    padding-bottom: 30px;
+  }
+  #au-avatar {
+    background-image: url(IMAGES/about.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    width:100%;
+    height: 50vh;
+    position: relative;
+  }
+  #au-avatar h1 {
+    font-size: 25px;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+  }
+  .au-auth-wiki{
+    margin-top: 40px;
+    position: absolute;
+    line-height:30px;
+    font-size: 15px;
+  }
+  .au-auth-wiki h3{
+    font-size: 20px;
+  }
+  .au-auth-wiki br{
+    display: none;
+  }
+  #au-get-started{
+    margin-top: 120px;
+    font-size: 25px;
+  }
+   #au-get-started button{
+    font-size: 15px;
+
+   }
+  .au-qa{
+    font-size: 20px;
+    width: 90%;
+      
+  }
+ 
+  .au-flex-item{
+    height: 100%;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 30px;
+    padding-bottom: 20px;
+  }
+ 
+  .au-flex-item p{
+    font-size: 36px;
+  }
+   
+  .au-zuri-team{
+    font-size: 20px;
+    margin-bottom: 30px;
+    
+  }
+   
+  
+  .footer-logo{color: white;
+  }
+  
+}
+ 
+
+/* END CONTAINER */
+
+ 
+ 
 /* ###---FOOTER END---### */
 
 /* ###---RESPONSIVE STYLING FOR HEADER AND FOOTER START---### */
@@ -520,7 +673,7 @@ footer a:hover {
   .desktop_nav {
     display: flex;
     align-items: center;
-    width: 80%;
+    width: 60%;
   }
 
   footer {
@@ -529,9 +682,11 @@ footer a:hover {
     align-items: center;
     text-align: left;
     font-family: "open sans" sans-serif;
+    
   }
 .footer-logo{
   color: white;
+  margin-top: 14px;
 }
   .footer_nav {
     flex-direction: row;
@@ -540,12 +695,13 @@ footer a:hover {
   }
 
   .footer_nav h4 {
-    font-size: 0.85rem;
+    font-size: 32px;
     margin: 0;
   }
 }
 
 /* ---Desktops--- */
+
 @media screen and (min-width: 1020px) {
   body {
     padding: 0;
@@ -553,7 +709,7 @@ footer a:hover {
 
   header a {
     font-size: 0.75rem;
-    /* padding: .45rem .75rem; */
+   
   }
 
   footer {
@@ -574,6 +730,20 @@ footer a:hover {
   .footer_nav {
     margin: 0;
     width: 55%;
+  }
+}
+
+@media screen and (max-width: 470px){
+  .au-zuri-team{
+    font-size: 30px;
+  }
+  .au-cp{
+    margin-right:5px;
+     
+  }
+  .au-flex-item{
+    margin-left: 5%;
+    width:90%;
   }
 }
 
