--- a/frontend/css/landing.css
+++ b/frontend/css/landing.css
@@ -165,14 +165,14 @@ main {
         padding: 0.1rem 0.1rem 1.5rem;
     }
 
-    .button{
+    /* .button{
         padding: 0.3rem 1rem;
     border-radius: var(--input-border-radius);
     background-color: none;
     color: #eee;
     border: none;
     cursor: pointer;
-    }
+    } */
 
     /* .lpmiddleb {
         border-left: 29rem solid #CCF1FE;
@@ -209,6 +209,12 @@ main {
         place-items: center;
     }
 
+    .lplink1 {
+        text-align: right;
+        color: #FFFDFD;
+        margin: 2rem 0 1rem 1rem;
+    }
+
     #lpimage1 {
         max-width: 200px;
         overflow: hidden;
@@ -226,11 +232,11 @@ main {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        margin-top: 2rem;
+        margin-top: 3rem;
         padding-top: 0.5rem;
-        margin-bottom: 2rem;
         place-items: center;
-        gap: 1.5rem;
+        gap: 3rem;
+        margin-bottom: -12rem;
     }
 
     .lpmiddle2a {
@@ -238,6 +244,17 @@ main {
         flex-direction: column;
         justify-content: space-between;
     }
+
+    #lpimage5, #lpimage4{
+        max-width: 270px;
+        position: relative;
+    }
+
+    #lpimage5{
+        z-index: -1;
+        top: -320px;
+        left: -30px;
+     }
 
     /*  .lpmiddlec {
         border-left: 580px solid #CCF1FE;
@@ -281,7 +298,7 @@ main {
         display: flex;
         flex-direction: column;
         background-color: #005E7D;
-        padding:2rem 0.5rem 5rem;
+        padding:2rem 0.8rem 5rem;
         justify-content: space-between;
         gap: 3rem;
         border-radius: 8px;
@@ -303,6 +320,23 @@ main {
         flex-direction: column;
         justify-content: space-between;
         place-items: center;
+    }
+
+
+
+    .lpmiddle4aiii{
+        margin-bottom: -1.5rem;
+        display: flex;
+        flex-direction: column;
+        padding-right: 1rem;
+        padding-left: 1rem;
+    }
+
+    .lplink2{
+        color: #eee;
+        font-weight: 50;
+        font-size: 12px;
+        margin-top: 0.5rem;
     }
 
     .lpmiddle5 {
@@ -329,6 +363,14 @@ main {
         padding-bottom: 2rem;
     }
 
+    #lpimage6{
+        max-width: 200px;
+    }
+
+    img{
+        overflow: hidden;
+    }
+
     .lpmiddle6 {
         margin-top: 2rem;
         margin-bottom:2rem;
@@ -347,6 +389,7 @@ main {
         font-style: normal;
         text-align: center;
         color: #005E7D;
+        font-size: 20px;
     }
 
 
@@ -354,7 +397,7 @@ main {
     #lpheading3 {
         color: #FFFDFD;
         font-style: normal;
-        margin-left: 20px;
+        font-size: 20px;
     }
 
     #lpheading4 {
@@ -362,6 +405,7 @@ main {
         font-style: normal;
         text-align: center;
         font-weight: 600;
+        font-size: 30px;
 
     }
 
@@ -375,17 +419,18 @@ main {
 
     #lptext2 {
         color: #FFFDFD;
-        font-size: 25px;
+        font-size: 20px;
         font-style: normal;
         text-align: left;
     }
 
     #lptext3 {
-        font-size: 25px;
+        font-size: 15px;
         font-style: normal;
         text-align: center;
         color: #1D1D1D;
         margin-top: 50px;
+
     }
 
 /* ###---MAIN END---### */
@@ -634,7 +679,7 @@ footer a:hover {
         flex-direction: row;
         padding: 1rem 3rem 4rem 3rem;
         justify-content: space-between;
-        gap: 50px;
+        gap: 2.5rem;
         margin-top: -3rem;
     }
 
@@ -676,24 +721,26 @@ footer a:hover {
         justify-content: space-evenly;
         gap: 1rem;
         padding: 0px 10px 0px 0;
-        width: 80%;
+        width: 80%;margin-top: 4.5rem;
     }
 
 .lpmiddle2b{
     margin-top: 30rem;
+    margin-left: 6rem;
 
 }
 
 #lpimage5, #lpimage4{
-    max-width: 500px;
+    max-width: 400px;
     position: relative;
-    max-height: 600px;
+    /* max-height: 600px; */
+    overflow: hidden;
 }
 
 #lpimage5{
    z-index: -1;
-   top: -570px;
-   left: -90px;
+   top: -470px;
+   left: -80px;
 }
 
 
@@ -751,6 +798,15 @@ footer a:hover {
         margin-right: 50px;
         padding-bottom: 80px;
     }
+
+.lpmiddle4aii{
+    margin-top: -20rem;
+}
+
+.lpmiddle4bii{
+    margin-top: -18rem;
+}
+
 .lpmiddle4aiii{
     margin-bottom: -1.5rem;
     display: flex;
@@ -790,6 +846,7 @@ footer a:hover {
         flex-direction: row;
         background-color: #CCF1FE;
         margin: 0 -7rem 2rem;
+        padding: 3rem 3rem 2rem 3rem;
     }
 
     .lpmiddle5a {
@@ -804,6 +861,9 @@ footer a:hover {
     .lpmiddle5b {
         padding: 1rem;
     }
+    #lpimage6{
+        max-width: 600px;
+    }
 
     .lpmiddle6 {
         margin-top: 120px;
@@ -815,7 +875,7 @@ footer a:hover {
         font-style: normal;
         text-align: left;
         color: #005E7D;
-        font-size: 55px;
+        font-size: 50px;
     }
 
     #lpheading2 {
@@ -823,6 +883,7 @@ footer a:hover {
         font-style: normal;
         text-align: center;
         color: #005E7D;
+        font-size: 50px;
     }
 
     #lpheading3 {
@@ -836,7 +897,7 @@ footer a:hover {
         font-style: normal;
         text-align: center;
         font-weight: 600;
-
+font-size: 50px;
     }
 
     #lptext {
@@ -844,12 +905,12 @@ footer a:hover {
         font-style: normal;
         text-align: left;
         color: #1D1D1D;
-        font-weight: 400;
+        font-weight: 100;
     }
 
     #lptext2 {
         color: #FFFDFD;
-        font-size: 25px;
+        font-size: 20px;
         font-style: normal;
         text-align: left;
     }
