--- a/frontend/css/landing.css
+++ b/frontend/css/landing.css
@@ -1,8 +1,4 @@
-body {    
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-
+body {
     font-family: 'Poppins', sans-serif;
     min-height: 100vh;
     padding: 0 1.25rem;
@@ -27,7 +23,7 @@ header,
 
 header .company-logo {
     font-size: 1.25rem;
-    letter-spacing: .05rem;    
+    letter-spacing: .05rem;
     text-align: left;
 }
 
@@ -35,12 +31,12 @@ header a,
 header button {
     border: none;
     /* background-color: #557E8C; */
-    color: black;        
+    color: black;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 1rem;  
-    font-weight: 600;  
+    font-size: 1rem;
+    font-weight: 600;
 
     height: 2rem;
     padding: 0 1rem;
@@ -57,7 +53,7 @@ header a:hover {
 header .signup-btn {
     background-color: #00BBF9;
     border: none;
-    color: white;    
+    color: white;
 }
 
 header button:hover {
@@ -77,7 +73,7 @@ header input:focus {
 .mob_search-bar {
     display: flex;
     align-items: center;
-    position: relative;    
+    position: relative;
     width: 50%;
 }
 
@@ -86,17 +82,17 @@ header input:focus {
     position: absolute;
     top: 55%;
     transform: translateY(-50%);
-    left: .5rem;    
+    left: .5rem;
 }
 
 .mob_search-bar input {
     width: 100%;
     height: 1.75rem;
-    padding: 0 1.75rem;   
+    padding: 0 1.75rem;
 }
 
 .company-logo {
-    color: #00BBF9;    
+    color: #00BBF9;
     font-size: 1.75rem;
     font-weight: 600;
     letter-spacing: .2rem;
@@ -151,20 +147,298 @@ header input:focus {
 
 /* ###---HEADER END---### */
 
-/* ###---MAIN START---### */
+/* ###--- MAIN START---### */
+
 
 main {    
     margin: 0 -1.25rem;
     padding: 1rem 1.25rem;
-    text-align: left;
 }
+
+    .lpmiddle1 {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        background-color: #CCF1FE;
+        border-radius: 8px;
+        /* margin-top: 2rem; */
+        padding: 0.1rem 0.1rem 1.5rem;
+    }
+
+    /* .button{
+        padding: 0.3rem 1rem;
+    border-radius: var(--input-border-radius);
+    background-color: none;
+    color: #eee;
+    border: none;
+    cursor: pointer;
+    } */
+
+    /* .lpmiddleb {
+        border-left: 29rem solid #CCF1FE;
+        border-right: 29rem solid #CCF1FE;
+        border-top: 5rem solid #CCF1FE;
+        border-bottom: 4rem solid white;
+        border-radius: 0 0 16px 16px;
+    } */
+
+    .lpmiddle1a {
+        display: flex;
+        flex-direction: column;
+        padding: 4rem 1rem;
+        gap: 2rem;
+    }
+
+    .lpmiddle1b {
+        display: flex;
+        flex-direction: column;
+        padding: 1rem 0.5rem 4rem 0.5rem;
+        justify-content: center;
+        gap: 2rem;
+    }
+
+    .lpmiddle1bi,
+    .lpmiddle1bii {
+        padding: 2rem 2rem 2rem 2rem;
+        background-color: #005E7D;
+        border-radius: 8px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        gap: 0.5rem;
+        place-items: center;
+    }
+
+    .lplink1 {
+        text-align: right;
+        color: #FFFDFD;
+        margin: 2rem 0 1rem 1rem;
+    }
+
+    #lpimage1 {
+        max-width: 200px;
+        overflow: hidden;
+    }
+
+
+    
+
+    #smallimage {
+        max-width: 70px;
+    }
+
+
+    .lpmiddle2 {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        margin-top: 3rem;
+        padding-top: 0.5rem;
+        place-items: center;
+        gap: 3rem;
+        margin-bottom: -12rem;
+    }
+
+    .lpmiddle2a {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    #lpimage5, #lpimage4{
+        max-width: 270px;
+        position: relative;
+    }
+
+    #lpimage5{
+        z-index: -1;
+        top: -320px;
+        left: -30px;
+     }
+
+    /*  .lpmiddlec {
+        border-left: 580px solid #CCF1FE;
+        border-right: 600px solid #CCF1FE;
+        border-bottom: 50px solid #CCF1FE;
+        border-top: 50px solid white;
+        border-radius: 16px 16px 0 0; 
+
+    } */
+
+    .lpmiddle3 {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        background-color: #CCF1FE;
+        border-radius: 8px 8px 8px 8px;
+        place-items: center;
+        gap: 1rem;
+        padding: 1rem 0.5rem 1.5rem;
+    }
+
+    .lpmiddle3b {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        gap: 1rem;
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+    }
+
+    .lpmiddle4 {
+        margin-top: 2rem;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 100px;
+        justify-content: space-between;
+        gap: 2rem;
+    }
+
+    .lpmiddle4a {
+        display: flex;
+        flex-direction: column;
+        background-color: #005E7D;
+        padding:2rem 0.8rem 5rem;
+        justify-content: space-between;
+        gap: 3rem;
+        border-radius: 8px;
+    }
+
+    .lpmiddle4b {
+        display: flex;
+        flex-direction: column;
+        background-color: #005E7D;
+        padding: 2rem 0.5rem 5rem;
+        justify-content: space-between;
+        gap: 3rem;
+        border-radius: 8px;
+    }
+
+    .lpmiddle4ai,
+    .lpmiddle4bi {
+        display: flex;
+        flex-direction: column;
+        /* justify-content: space-between; */ 
+        place-items: center;
+    }
+
+
+
+    .lpmiddle4aiii{
+        margin-bottom: -1.5rem;
+        display: flex;
+        flex-direction: column;
+        padding-right: 1rem;
+        padding-left: 1rem;
+    }
+
+    .lplink2{
+        color: #eee;
+        font-weight: 50;
+        font-size: 12px;
+        margin-top: 0.5rem;
+    }
+
+    .lpmiddle5 {
+        display: flex;
+        flex-direction: column;
+        background-color: #CCF1FE;
+        place-items: cener;
+        padding: 1rem 0.5rem 0.2rem;
+        justify-content: space-between;
+        gap: 3rem;
+    }
+
+    .lpmiddle5a {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        gap: 2rem;
+        padding-left: 0.5rem;
+        padding-right: 0.5rem;
+    }
+
+    .lpmiddle5b {
+        margin-top: 3rem;
+        padding-bottom: 2rem;
+    }
+
+    #lpimage6{
+        max-width: 200px;
+    }
+
+    img{
+        overflow: hidden;
+    }
+
+    .lpmiddle6 {
+        margin-top: 2rem;
+        margin-bottom:2rem;
+    }
+
+    #lpheading {
+        font-weight: 700;
+        font-style: normal;
+        text-align: center;
+        color: #005E7D;
+        font-size: 20px;
+    }
+
+    #lpheading2 {
+        font-weight: 700;
+        font-style: normal;
+        text-align: center;
+        color: #005E7D;
+        font-size: 20px;
+    }
+
+
+
+    #lpheading3 {
+        color: #FFFDFD;
+        font-style: normal;
+        font-size: 20px;
+    }
+
+    #lpheading4 {
+        color: #00BBF9;
+        font-style: normal;
+        text-align: center;
+        font-weight: 600;
+        font-size: 30px;
+
+    }
+
+    #lptext {
+        font-size: 15px;
+        font-style: normal;
+        text-align: center;
+        color: #1D1D1D;
+        font-weight: 400;
+    }
+
+    #lptext2 {
+        color: #FFFDFD;
+        font-size: 20px;
+        font-style: normal;
+        text-align: left;
+    }
+
+    #lptext3 {
+        font-size: 15px;
+        font-style: normal;
+        text-align: center;
+        color: #1D1D1D;
+        margin-top: 50px;
+
+    }
 
 /* ###---MAIN END---### */
 
 /* ###---FOOTER START---### */
 
 footer {
-    background-color: #003E53;
+    background-color: #005e7d;
     margin: 0 -1.25rem;
     padding: 1.25rem 0;
 }
@@ -212,8 +486,8 @@ footer a:hover {
 
     body {
         padding: 0 4rem;
-    } 
-    
+    }
+
     header {
         margin: 0 -4rem;
         padding: 1.5rem 4rem;
@@ -222,7 +496,7 @@ footer a:hover {
     header .menu_btn {
         display: none;
     }
-    
+
     header .company-logo {
         font-size: 1.1rem;
         min-width: 6.5rem;
@@ -236,7 +510,7 @@ footer a:hover {
         font-size: .8rem;
         font-weight: 500;
         padding: 0 .8rem;
-        margin: 0 .25rem;        
+        margin: 0 .25rem;
     }
 
     .mob_search-bar {
@@ -253,7 +527,7 @@ footer a:hover {
     header button:hover {
         border: 1px solid #003E53;
         color: white;
-    }   
+    }
 
     .desktop_nav {
         display: flex;
@@ -274,7 +548,7 @@ footer a:hover {
 
     .desktop_nav .search-bar {
         display: flex;
-        align-items: center;                
+        align-items: center;
         position: relative;
         height: 2rem;
         margin: 0 .25rem;
@@ -291,6 +565,8 @@ footer a:hover {
         margin: 0 -4rem;
         padding: 2.5rem 4rem;
     }
+
+    
 
     footer {
         display: flex;
@@ -321,25 +597,348 @@ footer a:hover {
 
     body {
         padding: 0 6.5rem;
+        width: 100vw;
     } 
-    
+
     header {
         margin: 0 -6.5rem;
         padding: 2rem 6.5rem;
     }
 
+
+    .lpbutton1 {
+        width: 40%;
+        height: 70px;
+        background: #00BBF9;
+        box-shadow: 0px 4px 5px rgba(33, 33, 33, 0.1);
+        border-radius: 8px;
+        align-items: center;
+        padding: 16px;
+        color: #FFFDFD;
+        /* font-family: 'Open Sans'; */
+        font-style: normal;
+        font-weight: 700;
+        font-size: 20px;
+    }
+
+    .lpbutton1a {
+        width: 80%;
+        height: 70px;
+        background: #00BBF9;
+        box-shadow: 0px 4px 5px rgba(33, 33, 33, 0.1);
+        border-radius: 8px;
+        align-items: center;
+        padding: 16px;
+        color: #FFFDFD;
+        font-family: 'Open Sans';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 20px;
+    }
+
+    .lpbutton2 {
+        width: 50%;
+        height: 50px;
+        background: #00BBF9;
+        box-shadow: 0px 4px 5px rgba(33, 33, 33, 0.1);
+        border-radius: 8px;
+        align-items: center;
+        padding: 16px;
+        color: #FFFDFD;
+        font-family: 'Open Sans';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 20px;
+    }
+
+    .lpmiddle1 {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        background-color: #CCF1FE;
+        border-radius: 16px 16px 0 0;
+    }
+
+    /* .lpmiddleb {
+        border-left: 29rem solid #CCF1FE;
+        border-right: 29rem solid #CCF1FE;
+        border-top: 5rem solid #CCF1FE;
+        border-bottom: 4rem solid white;
+        border-radius: 0 0 16px 16px;
+    } */
+
+
+    .lpmiddle1a {
+        display: flex;
+        flex-direction: row;
+        padding: 4rem 1rem;
+        place-items: space-between;
+        gap: 2px;
+    }
+
+    .lpmiddle1b {
+        display: flex;
+        flex-direction: row;
+        padding: 1rem 3rem 4rem 3rem;
+        justify-content: space-between;
+        gap: 2.5rem;
+        margin-top: -3rem;
+    }
+
+    #lptext1b{
+        color: #FFFDFD;
+        text-align: left;
+    }
+
+    .lpmiddle1bi,
+    .lpmiddle1bii {
+        padding: 2rem 2rem 2rem 2rem;
+        background-color: #005E7D;
+        border-radius: 8px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        place-items: center;
+    }
+
+
+    .lplink1 {
+        text-align: right;
+        color: #FFFDFD;
+        margin: 2rem 0 1rem 10rem;
+    }
+
+    .lpmiddle2 {
+        display: flex;
+        flex-direction: row;
+        margin-top: 100px;
+        padding-top: 50px;
+        max-height: 600px;
+        margin-bottom: 12rem;
+    }
+
+    .lpmiddle2a {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        gap: 1rem;
+        padding: 0px 10px 0px 0;
+        width: 80%;margin-top: 4.5rem;
+    }
+
+.lpmiddle2b{
+    margin-top: 30rem;
+    margin-left: 6rem;
+
+}
+
+#lpimage5, #lpimage4{
+    max-width: 400px;
+    position: relative;
+    /* max-height: 600px; */
+    overflow: hidden;
+}
+
+#lpimage5{
+   z-index: -1;
+   top: -470px;
+   left: -80px;
+}
+
+
+    /* .lpmiddlec {
+        border-left: 25rem solid #CCF1FE;
+        border-right: 25rem solid #CCF1FE;
+        border-bottom: 50px solid #CCF1FE;
+        border-top: 50px solid white;
+        border-radius: 16px 16px 0 0;
+    } */
+
+    .lpmiddle3 {
+        display: flex;
+        flex-direction: column;
+        background-color: #CCF1FE;
+        margin-bottom: 100px;
+        height: 700px;
+        border-radius: 0 0 16px 16px;
+    }
+
+    .lpmiddle3b {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        gap: 100px;
+        margin-top: 100px;
+        margin-bottom: 50px;
+    }
+
+    .lpmiddle3bi {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .lpmiddle4 {
+        margin-top: 100px;
+        display: flex;
+        flex-direction: row;
+        height: 800px;
+        margin-bottom: 100px;
+        padding-left: 100px;
+        padding-right: 100px;
+        justify-content: center;
+    }
+
+    .lpmiddle4a {
+        display: flex;
+        flex-direction: column;
+        background-color: #005E7D;
+        padding: 40px;
+        justify-content: space-between;
+        border-radius: 8px;
+        width: 500px;
+        margin-right: 50px;
+        padding-bottom: 80px;
+    }
+
+.lpmiddle4aii{
+    margin-top: -20rem;
+}
+
+.lpmiddle4bii{
+    margin-top: -18rem;
+}
+
+.lpmiddle4aiii{
+    margin-bottom: -1.5rem;
+    display: flex;
+    flex-direction: column;
+    padding-right: 3rem;
+    padding-left: 3rem;
+}
+
+.lplink2{
+    color: #eee;
+    font-weight: 50;
+    font-size: 12px;
+    margin-top: 0.5rem;
+}
+
+    .lpmiddle4b {
+        display: flex;
+        flex-direction: column;
+        background-color: #005E7D;
+        padding: 30px;
+        justify-content: space-between;
+        border-radius: 8px;
+        width: 500px;
+        margin-left: 50px;
+        padding-bottom: 80px;
+    }
+
+    .lpmiddle4ai,
+    .lpmiddle4bi {
+        display: flex;
+        flex-direction: row;
+        place-items: center;
+    }
+
+    .lpmiddle5 {
+        display: flex;
+        flex-direction: row;
+        background-color: #CCF1FE;
+        margin: 0 -7rem 2rem;
+        padding: 3rem 3rem 2rem 3rem;
+    }
+
+    .lpmiddle5a {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        padding-left: 4rem;
+        padding-right: 1rem;
+        padding-top: 2.5rem;
+    }
+
+    .lpmiddle5b {
+        padding: 1rem;
+    }
+    #lpimage6{
+        max-width: 600px;
+    }
+
+    .lpmiddle6 {
+        margin-top: 120px;
+        margin-bottom: 70px;
+    }
+
+    #lpheading {
+        font-weight: 700;
+        font-style: normal;
+        text-align: left;
+        color: #005E7D;
+        font-size: 50px;
+    }
+
+    #lpheading2 {
+        font-weight: 700;
+        font-style: normal;
+        text-align: center;
+        color: #005E7D;
+        font-size: 50px;
+    }
+
+    #lpheading3 {
+        color: #FFFDFD;
+        font-style: normal;
+        margin-left: 20px;
+    }
+
+    #lpheading4 {
+        color: #00BBF9;
+        font-style: normal;
+        text-align: center;
+        font-weight: 600;
+font-size: 50px;
+    }
+
+    #lptext {
+        font-size: 25px;
+        font-style: normal;
+        text-align: left;
+        color: #1D1D1D;
+        font-weight: 100;
+    }
+
+    #lptext2 {
+        color: #FFFDFD;
+        font-size: 20px;
+        font-style: normal;
+        text-align: left;
+    }
+
+    #lptext3 {
+        font-size: 25px;
+        font-style: normal;
+        text-align: center;
+        color: #1D1D1D;
+        margin-top: 50px;
+    }
+
+
+
+
     header a,
-    header button {        
-        font-size: 1.1rem;        
+    header button {
+        font-size: 1.1rem;
     }
 
     header button {
-        min-width: 6rem;        
+        min-width: 6rem;
     }
 
-    main {
-        margin: 0 -6.5rem;
-        padding: 3.5rem 6.5rem;
+    .lpmiddle {
+        padding: 4rem 4rem 4rem 4rem;
     }
 
     footer {
